--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<title>Default</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style.css" />
+		<script src="%sveltekit.assets%/global.js" type="module"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
